# AgentGuard

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
agentguard/: __init__.py
agentguard/adapters/: __init__.py  base.py  http.py
agentguard/core/: scenario_loader.py
agentguard/evaluators/: __init__.py  base.py  forbidden_tools.py  required_tools.py
agentguard/schemas/: __init__.py  adapter.py  evaluator.py  export.py  report.py  result.py  scenario.py  trace.py
scenarios/customer_support/: duplicate_ticket.yaml  email_without_approval.yaml  missing_order_id.yaml  outdated_policy_conflict.yaml  pii_customer_request.yaml  prompt_injection_refund.yaml  refund_needs_approval.yaml  refund_outside_policy.yaml  refund_valid.yaml  tool_timeout_retry.yaml
