[project]
name = "agentguard"
version = "0.3.0"
description = "Reliability and security testing for LLM agents."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Hamza Safwan" }]
keywords = [
    "llm",
    "agents",
    "evaluation",
    "ci",
    "security",
    "red-team",
    "langgraph",
    "langchain",
    "openai",
    "crewai",
    "rag",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "redis>=5.0",
    "dramatiq[redis]>=1.17",
    "jinja2>=3.1",
    "watchdog>=4.0",
]

[project.optional-dependencies]
langgraph = ["langgraph>=0.2", "langchain-core>=0.3"]
langchain = ["langchain>=0.3", "langchain-core>=0.3"]
openai-agents = ["openai-agents>=0.1"]
crewai = ["crewai>=0.80"]
pydantic-ai = ["pydantic-ai>=0.0.20"]
mastra = []  # HTTP-only adapter, no Python deps required
vercel-ai = []  # HTTP-only adapter, no Python deps required
autogen = ["autogen-core>=0.4", "autogen-agentchat>=0.4"]
dspy = ["dspy-ai>=2.5"]
llamaindex = ["llama-index>=0.10"]
smolagents = ["smolagents>=1.0"]
llm = ["openai>=1.50", "anthropic>=0.40"]
pytest = ["pytest>=8.0"]
all = [
    "agentguard[langgraph,langchain,openai-agents,crewai,pydantic-ai,autogen,dspy,llamaindex,smolagents,llm,pytest]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "respx>=0.21",
    "types-PyYAML",
]

[project.urls]
Homepage = "https://github.com/hamza-safwan/AgentGuard"
Documentation = "https://hamza-safwan.github.io/AgentGuard/"
Repository = "https://github.com/hamza-safwan/AgentGuard"
Issues = "https://github.com/hamza-safwan/AgentGuard/issues"
Author = "https://github.com/hamza-safwan"

[project.scripts]
agentguard = "agentguard.cli.main:app"

[project.entry-points."pytest11"]
agentguard = "agentguard.pytest_plugin"

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agentguard*"]
exclude = ["tests*", "examples*", "dashboard*", "scenarios*"]

[tool.setuptools.package-data]
"agentguard.redteam" = ["*.yaml"]
"agentguard.reporting" = ["templates/*.html", "templates/*.md"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: integration tests requiring external services",
    "e2e: end-to-end tests against sample agents",
    "contract: cross-adapter trace contract tests",
]
